# fennec

./: fennec.code-workspace
.github/: codecov.yml
.github/workflows/: ci.yml
auth/: .unittest.env  alembic.ini  docker-compose.yml  pyproject.toml
auth/fennec_auth/: config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  routers.py  schemas.py  security.py  services.py
auth/migrations/: env.py
auth/migrations/versions/: 2025_02_16_1131-9344154ffd2a_create_initial_model.py  2025_03_22_1424-5024ccd14016_add_is_external_to_app.py
auth/tests/: conftest.py  test_routers.py  test_services.py
notebooks/: pyproject.toml
pipelines/: .gitignore  Dockerfile  docker-compose.yml
pipelines/dags/dbt/fennec/: dbt_project.yml  profiles.yml
pipelines/dags/dbt/fennec/models/: dummy.sql
pipelines/dags/utils/: constants.py
pipelines/requirements/: requirements-dev.txt  requirements.txt
server/: .gitignore  .unittest.env  docker-compose.yaml  pyproject.toml
server/data/sdmxml20/: compactdata.xml  data.xml  dataflow.xml  keyfamily.xml
server/data/sdmxml21/: agencyscheme.xml  categorisation.xml  categoryscheme.xml  codelist.xml  conceptscheme.xml  contentconstraint.xml  dataflow.xml  datastructure.xml  error.xml  genericdata.xml  structurespecificdata.xml
server/fennec_api/: __init__.py  main.py  worker.py
server/fennec_api/auth/: dependencies.py  router.py  schemas.py  service.py
server/fennec_api/core/: arq.py  config.py  crud.py  database.py  dependencies.py  schemas.py  security.py
server/fennec_api/etl/: postgres.py
server/fennec_api/health/: router.py  schemas.py
server/fennec_api/sdmx_v21/: client.py  exceptions.py  models.py  router.py  schemas.py  service.py  tasks.py
server/fennec_api/sdmx_v21/etl/: __init__.py  extract.py  load.py  transform.py
server/fennec_api/sdmx_v21/parser/: __init__.py  helpers.py  models.py
server/fennec_api/users/: exceptions.py  models.py  router.py  schemas.py  service.py
server/migrations/: env.py
server/migrations/versions/: 2024_03_03_1523-6346c09ac290_create_user_table.py  2024_08_15_1121-68577fd4b211_create_sdmxv2_1_meta_tables.py
server/tests/: conftest.py
server/tests/auth/: test_router.py
server/tests/sdmx_v21/: test_client.py  test_etl.py  test_parsing.py  test_router.py  test_service.py
server/tests/users/: test_router.py  test_service.py
