[tool.poetry]
name = "fennec-auth"
version = "0.1.0"
description = ""
authors = ["saiqi <julien.bernard.iphone@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fennec_auth"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.38"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.10.6"}
sentry-sdk = "^2.20.0"
httpx = "^0.28.1"
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.15.0"
pytest-asyncio = "^0.25.3"
ruff = "^0.9.5"
types-passlib = "^1.7.7.20241221"
aiosqlite = "^0.21.0"
types-python-jose = "^3.3.4.20240106"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
"**/migrations/env.py" = ["E402","F401"]

