[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["saiqi <julien.bernard.iphone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
duckdb = "^1.1.3"
jupysql = "^0.10.17"
duckdb-engine = "^0.14.2"
pandas = "^2.2.3"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
